# event-driven-rust-engine

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/engine/: bus.rs  event.rs  mod.rs
src/execution/: engine.rs  fill.rs  mod.rs  order.rs
src/market_data/: event.rs  feed.rs  fetcher.rs  mod.rs  normalizer.rs  types.rs
src/market_data/adapters/: binance.rs  binance_futures.rs  bybit.rs  coingecko.rs  mod.rs
src/portfolio/: mod.rs  portfolio.rs  position.rs
src/risk/: mod.rs  risk.rs
src/strategy/: event.rs  mod.rs  simple.rs
src/strategy/cross_exchange/: arbitrage.rs  mod.rs
src/utils/: mod.rs
