[package]
name = "rust-event-driven-trader"
version = "0.1.0"
edition = "2024"

[dependencies]
coingecko = "1.1.3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
governor = "0.6"
nonzero_ext = "0.3"
dotenv = "0.15"
